--- a/frontend/src/custom.scss
+++ b/frontend/src/custom.scss
@@ -59,3 +59,13 @@ body {
 .user-info {
   min-width: 800px;
 }
+
+@media only screen and (max-width: 760px) {
+  .flex-column-mobile {
+    flex-direction: column;
+  }
+
+  .max-width-mobile {
+    max-width: 100%;
+  }
+}
